# gstreamer

./: CMakeLists.txt  basic-tutorial-1  basic-tutorial-1.c
src/examples/: CMakeLists.txt
